--- a/src/public/index.html
+++ b/src/public/index.html
@@ -21,9 +21,10 @@
 
         // emitir
         socket.emit('mensaje', {nombre: 'Jose'});
-        // escuchar
-        socket.on('mensaje', function(payload) {
-            console.log('Escuchando', payload)
+
+        socket.on('active-bands', function(payload) {
+            console.clear();
+            console.table(payload)
         })
 
     </script>
